@@ -22,5 +22,6 @@ Grid *gridSwapNearNodeExceptBoundary(Grid *g, int node );
 /* improvementLimit is set to default if less than 0.0 */
 Grid *gridSwap(Grid *g, double improvementLimit );
 Grid *gridRemoveTwoFaceCell(Grid *g, Queue *q, int cell );
+Grid *gridRemoveThreeFaceCell(Grid *g, Queue *q, int cell );
 
 #endif /* GRIDSWAP_H */
